# bupt_os_lab

./: .gitignore  README.md
lab1/: CMakeLists.txt  duration.c  duration.h  lock.c  main.c  reader_first.c  reader_first.h  rw_lock.c  rw_lock.h  writer_first.c  writer_first.h
lab2/: CMakeLists.txt  contiguous.c  contiguous.h  generate_op.py  main.c
report/: 内存分配实验.md  进程管理实验.md
report/lab1/: lock.txt  reader 2.txt  reader.txt  writer 2.txt  writer.txt
report/lab2/: check_output_first.txt  output_first.txt
